# reqtag

./: README.md
reqtag/: README.md  pyproject.toml
reqtag/src/reqtag.egg-info/: PKG-INFO  SOURCES.txt
src/reqtag/: __init__.py  tagger.py
src/reqtag.egg-info/: top_level.txt
