[project]
name = "reqtag"
version = "0.0.1"
authors = [
  { name="Benjamin Ecker", email="pythonredditbot24@gmail.com" },
]
description = "A tag parser for python 3.x"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]